--- a/package.json
+++ b/package.json
@@ -34,7 +34,14 @@
   "dependencies": {
     "express": "^4.19.2",
     "morgan": "^1.10.0",
+    "mssql": "^10.0.2",
+    "mysql": "^2.18.1",
+    "pg": "^8.11.5",
+    "reflect-metadata": "^0.2.2",
+    "sql.js": "^1.10.3",
+    "sqlite3": "^5.1.7",
     "swagger-ui-express": "^5.0.0",
-    "tsoa": "^6.2.1"
+    "tsoa": "^6.2.1",
+    "typeorm": "^0.3.20"
   }
 }
